Disable virtualized contexts with passthrough command decoder

Using virtualized contexts with passthrough command decoder causes
crashes during MakeCurrent() due to inconsistent state.

Bug: 914976
Change-Id: I1c8398d4a9539e8165c32594897ea434d2c7b54e
Reviewed-on: https://chromium-review.googlesource.com/c/1381265
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Commit-Queue: Sunny Sachanandani <sunnyps@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617351}
Former-commit-id: 11278a3777db2c1cba694871953c24a43ee853eb